@@ -16,18 +16,28 @@
 
 TEMP_FILE=/tmp/lrrd-amavis.$$
 AMAVIS_LOG=/var/log/mail/mail.info
-LOGTAIL=`which logtail`
+LOGTAIL=${logtail:-`which logtail`}
+STATEFILE=@@PLUGSTATE@@/amavis.offset
 
 if [ "$amavislog"  ]; then AMAVIS_LOG=$amavislog ; fi
 
 if [ "$1" = "autoconf" ]; then
-        if [ -f ${AMAVIS_LOG} -a -x ${LOGTAIL} ] ; then
+        if [ -f "${AMAVIS_LOG}" -a -n "${LOGTAIL}" -a -x "${LOGTAIL}" ] ; then
 		echo yes
 		exit 0
 	else
 		echo no
 		exit 1
 	fi
+fi
+
+# Try tailing a random file to check how arguments are passed
+`$LOGTAIL /etc/hosts 2>/dev/null >/dev/null`
+ARGS=0
+if [ $? = 66 ]; then
+    if [ ! -n "$logtail" ]; then
+	ARGS=1
+    fi
 fi
 
 if [ "$1" = "config" ]; then
@@ -48,7 +58,11 @@ spams=U
 
 if [ -e $TEMP_FILE -a -f $TEMP_FILE ]
 then
-	logtail ${AMAVIS_LOG} | grep 'amavis\[.*\]:' > ${TEMP_FILE}
+	if [ $ARGS != 0 ]; then
+	    $LOGTAIL -f ${AMAVIS_LOG} -o ${STATEFILE} | grep 'amavis\[.*\]:' > ${TEMP_FILE}
+	else
+	    $LOGTAIL ${AMAVIS_LOG} ${STATEFILE} | grep 'amavis\[.*\]:' > ${TEMP_FILE}
+	fi
 	total=`cat ${TEMP_FILE} | wc -l`
 	virus=`grep INFECTED ${TEMP_FILE} | wc -l`
 	spamm=`grep 'Passed.*Hits: 1[0-9][.]' ${TEMP_FILE} | wc -l`
