@@ -7,6 +7,7 @@ munin (work)
   * Plugin: Bugfix in generic/sendmail_mail* autoconf.
   * Plugin: Changed default log for generic/postfix_mailstats from syslog to
   mail.log. Downgraded it from auto to manual.
+  * Plugin: Made generic/amavis autodetect logtail format.
 
 munin (1.3.0)
 
